--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <script src='js/responsiveslides.min.js'></script>
 <script src='js/rollover-gallery.min.js'></script>
 <script src='js/flickity.pkgd.min.js'></script>
-<script  src="./script.js"></script>
+<script  src="js/script.js"></script>
 
     
     </body>
