--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
             <form class="contact-form" action="gd_web_form.php" method="post">
                 <input id="name" type="text" name="name" placeholder="Your Full Name" style="float:left;">
 				<input id="email" type="text" name="email" placeholder="E-mail Address" style="float:right;">
-                <input class="submit align-center" type="submit" name="submit" value="Book Now">
+                <input class="submit align-center" type="submit" name="submit" value="Submit">
             </form>
                 
         </div><!-- end column -->
